--- a/main.css
+++ b/main.css
@@ -1,23 +1,1 @@
-canvas{
-    margin-left:auto!important;
-    margin-right:auto;
-    display:block;
-}
-body{
-    background-color: rgb(3, 23, 54); 
-    
-    color:aliceblue; 
-    font-family: 'Exo', sans-serif;
-    font-size: 1.5em;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-.title {
-    font-size: 25pt;
-    padding-top: 25pt;
-    font-weight: bold;
-    color: #87CEEB;
-}
+canvas{margin-left:auto!important;margin-right:auto;display:block}body {background-color: #87ceff;}
