--- a/main.css
+++ b/main.css
@@ -1,1 +1,3 @@
-canvas{margin-left:auto!important;margin-right:auto;display:block}body {background-color: #87ceff;}
+/* canvas{margin-left:auto!important;margin-right:auto;display:block}body {background-color: #87ceff;}*/
+body { margin:0; padding:0; overflow:hidden }
+body>canvas { height:100%!important; background-color: #87ceff; position:fixed; top:0; left:0 }
